Revert "fixed: back to top button overlapping with feedback link (#16)"
This reverts commit 1e281e5d540c38607d5fe5e4b64ec6ef8ba6dc7a.

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   position: fixed;
   right: 1rem;
-  bottom: calc(v.$footer-height-large);
+  bottom: calc(v.$footer-height-large - v.$back2top-size / 2);
   background: #28a745 !important;
   color: #b32c22 !important;
   padding: 0;
